examples/test/testpolicy11656.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11656
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key5: value20
      key25: value48
      key23: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value40
          key42: value20
          key26: value46
      podSelector:
        matchLabels:
          key47: value37
